--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">My Closet</string>
-    <string name="title_activity_main">My Closet</string>
+    <string name="app_name">Komodus</string>
+    <string name="title_activity_main">Komodus</string>
     <string name="package_name">com.ormar.mycloset</string>
     <string name="custom_url_scheme">com.ormar.mycloset</string>
 </resources>
